--- a/src/client/app/pages/group/server/container-detail/container-detail.html
+++ b/src/client/app/pages/group/server/container-detail/container-detail.html
@@ -169,6 +169,14 @@
 <!-- Modal Define Begin -->
 <hb-modal [options]="deleteContainerModalOptions">
   <p>Are you sure you want to delete {{ container?.Name?.substr(1) }}?</p>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" (change)="enableForceDeletion($event)">
+      <span class="text-danger">
+          You want to force delete
+      </span>
+    </label>
+  </div>
   <hb-modal-footer>
     <button type="button" class="btn btn-default btn-flat" (click)="deleteContainerModalOptions.show = fasle">Cancel</button>
     <button type="button" class="btn btn-success btn-flat" (click)="deleteContainer()">Confirm</button>
