--- a/src/client/app/pages/group/server/container-new/container-new.html
+++ b/src/client/app/pages/group/server/container-new/container-new.html
@@ -44,7 +44,7 @@
           <option value="host">Host</option>
           <option value="bridge">Bridge</option>
           <option value="custom">Custom</option>
-        </select>        
+        </select>
       </div>
       <div class="form-group" *ngIf="form.controls.NetworkMode.value == 'custom'" [class.has-error]="submitted && form.controls.NetworkName.invalid">
         <label>Network Name</label>
@@ -235,6 +235,46 @@
           <button type="button" class="btn btn-default btn-flat btn-sm" (click)="addLink()">
             <i class="fa fa-plus"></i> Add Link
           </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="box">
+      <div class="box-header with-border">Log Setting</div>
+      <div class="box-body">
+        <div style="padding-left: 20px; padding-right: 20px;">
+          <div class="box-second-title">Driver</div>
+          <div class="form-group" style="margin:0px 15px;" [class.has-error]="submitted && form.controls.LogDriver.invalid">
+            <input class="form-control" formControlName="LogDriver" required maxlength="100"/>
+            <div *ngIf="submitted && form.controls.LogDriver.invalid">
+              <span class="help-block" *ngIf="form.controls.LogDriver.errors.required">log driver is required.</span>
+              <span class="help-block" *ngIf="form.controls.LogDriver.errors.maxlength">log driver cannot more than 100 characters.</span>
+            </div>
+          </div>
+          <div style="display:inline-block;width:100%;" formArrayName="LogOpts">
+            <div class="box-second-title" style="margin-top:10px;">Opts</div>
+            <div class="col-md-6" *ngFor="let opt of form.controls.LogOpts.controls; let i = index;" [formGroupName]="i">
+              <div class="equal-fields">
+                <div class="form-group" [class.has-error]="submitted && opt.controls.Value.invalid">
+                  <input type="text" class="form-control" placeholder="e.g. option=xxx" required maxlength="100" formControlName="Value">
+                  <div *ngIf="submitted && opt.controls.Value.invalid">
+                    <span class="help-block" *ngIf="opt.controls.Value.errors.required">opt is required.</span>
+                    <span class="help-block" *ngIf="opt.controls.Value.errors.maxlength">opt cannot more than 100 characters.</span>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <button type="button" class="btn btn-default btn-flat" (click)="removeLogOpt(i)">
+                    <i class="fa fa-close"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group no-margin">
+            <button style="margin: 0 15px;" type="button" class="btn btn-default btn-flat btn-sm" (click)="addLogOpt()">
+              <i class="fa fa-plus"></i> Add LogOpt
+            </button>
+          </div>
         </div>
       </div>
     </div>
