--- a/src/client/app/pages/group/server/container-clone/container-clone.html
+++ b/src/client/app/pages/group/server/container-clone/container-clone.html
@@ -237,7 +237,7 @@
     </div>
 
     <div class="box">
-      <div class="box-header with-border">Log Setting</div>
+      <div class="box-header with-border">Log Config</div>
       <div class="box-body">
         <div style="padding-left: 20px; padding-right: 20px;">
           <div class="box-second-title">Driver</div>
