--- a/src/client/app/pages/group/server/container-clone/container-clone.html
+++ b/src/client/app/pages/group/server/container-clone/container-clone.html
@@ -137,6 +137,57 @@
       </div>
     </div>
 
+    <div class="form-group">
+      <div class="checkbox">
+        <label style="font-weight: 700;">
+          <input type="checkbox" formControlName="EnableLogFile">
+          Log Config
+        </label>
+      </div>
+      <div class="box" *ngIf="form.controls.EnableLogFile.value">
+        <div class="box-body">
+          <div style="padding-left: 20px; padding-right: 20px;">
+            <div class="box-second-title">Driver</div>
+            <div class="form-group" style="padding: 0 45px 0 15px;" [class.has-error]="submitted && form.controls.LogDriver.invalid">
+              <input class="form-control" style="width:50%;" formControlName="LogDriver" required maxlength="100"/>
+              <div *ngIf="submitted && form.controls.LogDriver.invalid">
+                <span class="help-block" *ngIf="form.controls.LogDriver.errors.required">log driver is required.</span>
+                <span class="help-block" *ngIf="form.controls.LogDriver.errors.maxlength">log driver cannot more than 100 characters.</span>
+              </div>
+            </div>
+            <div class="alert alert-warning show" style="margin: 0 15px;">
+              For more information on the <strong>log driver</strong>, please refer to the official
+              <a style="color: #155bb3" target="_black" href="https://docs.docker.com/config/containers/logging/configure/#supported-logging-drivers">website link</a>
+            </div>
+            <div style="display:inline-block;width:100%;" formArrayName="LogOpts">
+              <div class="box-second-title" style="margin-top:10px;">Opts</div>
+              <div class="col-md-6" *ngFor="let opt of form.controls.LogOpts.controls; let i = index;" [formGroupName]="i">
+                <div class="equal-fields">
+                  <div class="form-group" [class.has-error]="submitted && opt.controls.Value.invalid">
+                    <input type="text" class="form-control" placeholder="e.g. option=xxx" required maxlength="100" formControlName="Value">
+                    <div *ngIf="submitted && opt.controls.Value.invalid">
+                      <span class="help-block" *ngIf="opt.controls.Value.errors.required">opt is required.</span>
+                      <span class="help-block" *ngIf="opt.controls.Value.errors.maxlength">opt cannot more than 100 characters.</span>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <button type="button" class="btn btn-default btn-flat" (click)="removeLogOpt(i)">
+                      <i class="fa fa-close"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="form-group no-margin">
+              <button style="margin: 0 15px;" type="button" class="btn btn-default btn-flat btn-sm" (click)="addLogOpt()">
+                <i class="fa fa-plus"></i> Add LogOpt
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="box" *ngIf="form.controls.NetworkMode.value != 'host'">
       <div class="box-header with-border">Ports Binding</div>
       <div class="box-body" formArrayName="Ports">
@@ -232,46 +283,6 @@
           <button type="button" class="btn btn-default btn-flat btn-sm" (click)="addLink()">
             <i class="fa fa-plus"></i> Add Link
           </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="box">
-      <div class="box-header with-border">Log Config</div>
-      <div class="box-body">
-        <div style="padding-left: 20px; padding-right: 20px;">
-          <div class="box-second-title">Driver</div>
-          <div class="form-group" style="margin:0px 15px;" [class.has-error]="submitted && form.controls.LogDriver.invalid">
-            <input class="form-control" formControlName="LogDriver" required maxlength="100"/>
-            <div *ngIf="submitted && form.controls.LogDriver.invalid">
-              <span class="help-block" *ngIf="form.controls.LogDriver.errors.required">log driver is required.</span>
-              <span class="help-block" *ngIf="form.controls.LogDriver.errors.maxlength">log driver cannot more than 100 characters.</span>
-            </div>
-          </div>
-          <div style="display:inline-block;width:100%;" formArrayName="LogOpts">
-            <div class="box-second-title" style="margin-top:10px;">Opts</div>
-            <div class="col-md-6" *ngFor="let opt of form.controls.LogOpts.controls; let i = index;" [formGroupName]="i">
-              <div class="equal-fields">
-                <div class="form-group" [class.has-error]="submitted && opt.controls.Value.invalid">
-                  <input type="text" class="form-control" placeholder="e.g. option=xxx" required maxlength="100" formControlName="Value">
-                  <div *ngIf="submitted && opt.controls.Value.invalid">
-                    <span class="help-block" *ngIf="opt.controls.Value.errors.required">opt is required.</span>
-                    <span class="help-block" *ngIf="opt.controls.Value.errors.maxlength">opt cannot more than 100 characters.</span>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <button type="button" class="btn btn-default btn-flat" (click)="removeLogOpt(i)">
-                    <i class="fa fa-close"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="form-group no-margin">
-            <button style="margin: 0 15px;" type="button" class="btn btn-default btn-flat btn-sm" (click)="addLogOpt()">
-              <i class="fa fa-plus"></i> Add LogOpt
-            </button>
-          </div>
         </div>
       </div>
     </div>
