--- a/src/client/app/pages/group/server/container-list/container-list.html
+++ b/src/client/app/pages/group/server/container-list/container-list.html
@@ -7,6 +7,9 @@
       <li class="pull-left header">
         <i class="fa fa-th"></i> {{ activedTab == 'containers' ? 'Containers' : 'Docker Images' }}
       </li>
+      <li [ngClass]="{'active': activedTab == 'components'}">
+        <a href="javascript:void(0)" (click)="changeTab('components')">Compose</a>
+      </li>
       <li [ngClass]="{'active': activedTab == 'images'}">
         <a href="javascript:void(0)" (click)="changeTab('images')">Docker Images</a>
       </li>
@@ -165,6 +168,96 @@
           </div>
           <div class="box-footer clearfix">
             <hb-pagination [totalCount]="filterImages.length" [pageSize]="pageSize" [maxSize]="10" [options]="containerPageOption" (onSelectPage)="setImagePage($event)">
+            </hb-pagination>
+          </div>
+        </div>
+      </div>
+
+      <div class="tab-pane" [ngClass]="{'active': activedTab == 'components'}">
+        <div class="box no-border">
+          <div class="box-body">
+            <div class="flex-display">
+              <div class="form-group form-group-sm has-feedback flex-1 margin-bottom-10">
+                <input type="text" class="form-control" autocomplete="off" name="imageFilter" placeholder="Enter key word" [ngModel]="imageFilter"
+                  (ngModelChange)="filterImage($event)">
+                <span class="fa fa-search form-control-feedback"></span>
+              </div>
+              <div class="form-group form-group-sm margin-bottom-10">
+                  <a [routerLink]="['/group', groupInfo.ID, ip, 'new-component']" class="btn btn-sm bg-olive btn-flat">
+                    <i class="fa fa-plus"></i> Add Component
+                  </a>
+                </div>
+            </div>
+            <div class="alert alert-info" *ngIf="!filterImages?.length && filterImageDone">
+              <i class="fa-fw fa fa-info"></i> No components found
+            </div>
+            <table class="table table-hover table-bordered td-components">
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>containers</th>
+                  <!-- <th>status</th> -->
+                  <th>Virual Size</th>
+                  <th>Created</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody *ngFor="let category of aaa;let i = index;">
+                <tr>
+                  <td [attr.rowspan]="category.competences.length">
+                    <div style="margin: 10px;">
+                      <i class="fa fa-circle text-success small"></i>
+                      {{ category.name }}
+                    </div>
+                  </td>
+                  <td>{{ category.competences[0].name }}</td>
+                  <td>{{category.competences[0].users}}</td>
+                  <td>12345</td>
+                  <td>
+                    <div class="operate">
+                      <button type="button" class="btn btn-sm btn-default" (click)="showRmImageModal(item)">
+                        <i class="fa fa-close text-danger"></i>
+                      </button>
+                    </div>
+                  </td>
+                  <td [attr.rowspan]="category.competences.length" class="operate">
+                    <div class="btn-group operate" [class.dropup]="last">
+                      <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
+                        <i class="fa fa-wrench"></i>
+                      </button>
+                      <ul class="dropdown-menu" role="menu">
+                        <li>
+                          <a href="javascript:void(0)" (click)="operate(item, 'restart')">
+                            <i class="fa fa-refresh text-success"></i> Restart
+                          </a>
+                        </li>
+                        <li>
+                          <a href="javascript:void(0)" (click)="operate(item, 'stop')">
+                            <i class="fa fa-stop"></i> Stop
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </td>
+                </tr>
+                <tr *ngFor="let item of category.competences.slice(1)">
+                  <td>{{ item.name }}</td>
+                  <td>{{ item.users }}</td>
+                  <td>32434</td>
+                  <td>
+                    <div class="operate">
+                      <button type="button" class="btn btn-sm btn-default" (click)="showRmImageModal(item)">
+                        <i class="fa fa-close text-danger"></i>
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="box-footer clearfix">
+            <hb-pagination [totalCount]="filterImages.length" [pageSize]="pageSize" [maxSize]="10" [options]="containerPageOption" (onSelectPage)="setImagePage($event)"
+              *ngIf="filterImages?.length > 0">
             </hb-pagination>
           </div>
         </div>
