--- a/src/client/app/pages/group/server/component-new/component-new.html
+++ b/src/client/app/pages/group/server/component-new/component-new.html
@@ -50,6 +50,7 @@
     </div>
     <div class="form-group">
       <a class="btn bg-olive btn-flat" (click)="checkComposeData()">校验</a>
+      <a class="btn bg-olive btn-flat" (click)="downloadComposeData()">下载</a>
       <button type="submit" class="btn bg-olive btn-flat">Save</button>
     </div>
   </form>
