--- a/src/client/app/pages/group/server/component-new/component-new.html
+++ b/src/client/app/pages/group/server/component-new/component-new.html
@@ -2,7 +2,7 @@
   <h1> New Compose</h1>
   <ol class="breadcrumb">
     <li>
-      <i class="fa fa-th"></i> Container List
+      <a [routerLink]="['/group', groupId, ip, 'overview']"><i class="fa fa-th"></i> Container List</a>
     </li>
     <li class="active">New Compose</li>
   </ol>
