--- a/src/client/app/pages/group/server/container-list/container-list.html
+++ b/src/client/app/pages/group/server/container-list/container-list.html
@@ -118,7 +118,7 @@
           </div>
           <div class="box-footer clearfix">
             <hb-pagination [totalCount]="filterContainers.length" [pageSize]="pageSize" [maxSize]="10" [options]="containerPageOption"
-              (onSelectPage)="setContainerPage($event)">
+              (onSelectPage)="setContainerPage($event)" *ngIf="filterServices?.length > 0">
             </hb-pagination>
           </div>
         </div>
@@ -169,7 +169,8 @@
             </table>
           </div>
           <div class="box-footer clearfix">
-            <hb-pagination [totalCount]="filterImages.length" [pageSize]="pageSize" [maxSize]="10" [options]="containerPageOption" (onSelectPage)="setImagePage($event)">
+            <hb-pagination [totalCount]="filterImages.length" [pageSize]="pageSize" [maxSize]="10" [options]="containerPageOption" (onSelectPage)="setImagePage($event)"
+            *ngIf="filterImages?.length > 0">
             </hb-pagination>
           </div>
         </div>
@@ -186,14 +187,14 @@
               </div>
               <div class="form-group form-group-sm margin-bottom-10">
                 <a [routerLink]="['/group', groupInfo.ID, ip, 'new-component']" class="btn btn-sm bg-olive btn-flat">
-                  <i class="fa fa-plus"></i> Add Component
+                  <i class="fa fa-plus"></i> Add Compose
                 </a>
               </div>
             </div>
-            <div class="alert alert-info" *ngIf="!filterImages?.length && filterImageDone">
-              <i class="fa-fw fa fa-info"></i> No components found
+            <div class="alert alert-info" *ngIf="!filterServices?.length && filterServiceDone">
+              <i class="fa-fw fa fa-info"></i> No composes found
             </div>
-            <table class="table table-hover table-bordered">
+            <table class="table table-hover table-bordered" *ngIf="filterServices?.length > 0">
               <thead>
                 <tr>
                   <th></th>
@@ -263,7 +264,8 @@
             </table>
           </div>
           <div class="box-footer clearfix">
-            <hb-pagination [totalCount]="filterImages.length" [pageSize]="pageSize" [maxSize]="10" [options]="containerPageOption" (onSelectPage)="setImagePage($event)">
+            <hb-pagination [totalCount]="filterImages.length" [pageSize]="pageSize" [maxSize]="10" [options]="containerPageOption" (onSelectPage)="setImagePage($event)"
+            *ngIf="filterServices?.length > 0">
             </hb-pagination>
           </div>
         </div>
